@@ -507,8 +507,9 @@ public class LabOrderDataExchange {
      */
     public String processIncomingViralLoadLabResults(String resultPayload) {
 
-        JsonParser parser = new JsonParser();
-        JsonElement rootNode = parser.parse(resultPayload);
+        // JsonParser parser = new JsonParser();
+        // JsonElement rootNode = parser.parse(resultPayload);
+        JsonElement rootNode = JsonParser.parseString(resultPayload);
 
         JsonArray resultsObj = null;
         String statusMsg;
@@ -526,40 +527,49 @@ public class LabOrderDataExchange {
             e.printStackTrace();
         }
 
-
         if (resultsObj.size() > 0) {
             for (int i = 0; i < resultsObj.size(); i++) {
                 JsonObject o =  resultsObj.get(i).getAsJsonObject();
                 Integer specimenId = o.get("order_number").getAsInt();
-                String dateSampleReceived = !o.get("date_received").isJsonNull() ? o.get("date_received").getAsString() : "";
-                String dateSampleTested = !o.get("date_tested").isJsonNull() ? o.get("date_tested").getAsString() : "";
+                //String dateSampleReceived = !o.get("date_received").isJsonNull() ? o.get("date_received").getAsString() : "";
+                JsonObject dateReceivedObject = o.get("date_received").getAsJsonObject();
+                String dateSampleReceived = dateReceivedObject.get("date").getAsString().trim();
+                //String dateSampleTested = !o.get("date_tested").isJsonNull() ? o.get("date_tested").getAsString() : "";
+                JsonObject dateTestedObject = o.get("date_tested").getAsJsonObject();
+                String dateSampleTested = dateTestedObject.get("date").getAsString().trim();
                 Date sampleReceivedDate = null;
                 Date sampleTestedDate = null;
 
                 if (StringUtils.isNotBlank(dateSampleReceived)) {
                     try {
                         sampleReceivedDate = Utils.getSimpleDateFormat(LAB_SYSTEM_DATE_PATTERN).parse(dateSampleReceived);
+                        System.out.println("Lab Results Get Results: Got sample receive date: " + sampleReceivedDate);
                     } catch (ParseException e) {
-                        //e.printStackTrace();
+                        System.err.println("Lab Results Get Results: Unable to get sample receive date" + e.getMessage());
+                        e.printStackTrace();
                     }
                 }
 
                 if (StringUtils.isNotBlank(dateSampleTested)) {
                     try {
                         sampleTestedDate = Utils.getSimpleDateFormat(LAB_SYSTEM_DATE_PATTERN).parse(dateSampleTested);
+                        System.out.println("Lab Results Get Results: Got sample tested date: " + sampleTestedDate);
                     } catch (ParseException e) {
-                        //e.printStackTrace();
+                        System.err.println("Lab Results Get Results: Unable to get sample tested date" + e.getMessage());
+                        e.printStackTrace();
                     }
                 }
 
-                String specimenReceivedStatus = o.get("sample_status").getAsString();// Complete, Incomplete, Rejected
-
-                String specimenRejectedReason = o.has("rejected_reason") ? o.get("rejected_reason").getAsString() : "";
-                String results = !o.get("result").isJsonNull() ? o.get("result").getAsString() : null; //1 - negative, 2 - positive, 5 - inconclusive
-                updateOrder(specimenId, results, specimenReceivedStatus, specimenRejectedReason, sampleReceivedDate, sampleTestedDate);
+                String specimenReceivedStatus = o.get("sample_status").getAsString().trim();// Complete, Incomplete, Rejected
+                //String specimenRejectedReason = o.has("rejected_reason") ? o.get("rejected_reason").getAsString() : "";
+                //String results = !o.get("result").isJsonNull() ? o.get("result").getAsString() : null; //1 - negative, 2 - positive, 5 - inconclusive
+                String labNumber = o.get("lab_no").getAsString().trim();
+                String results = o.get("result").getAsString().trim();
+                updateOrder(specimenId, results, specimenReceivedStatus, sampleReceivedDate, sampleTestedDate, labNumber);
                 // update manifest object to reflect received status
             }
         }
+        System.out.println("Lab Results Get Results: Viral load results pulled and updated successfully in the database");
         return "Viral load results pulled and updated successfully in the database";
     }
 
@@ -570,7 +580,7 @@ public class LabOrderDataExchange {
      * @param specimenStatus
      * @param rejectedReason
      */
-    private void updateOrder(Integer orderId, String result, String specimenStatus, String rejectedReason, Date dateSampleReceived, Date dateSampleTested) {
+    private void updateOrder(Integer orderId, String result, String specimenStatus, Date dateSampleReceived, Date dateSampleTested, String labNumber) {
 
         Order od = orderService.getOrder(orderId);
         LabManifestOrder manifestOrder = kenyaemrOrdersService.getLabManifestOrderByOrderId(orderService.getOrder(orderId));
@@ -581,16 +591,16 @@ public class LabOrderDataExchange {
             orderDiscontinuationDate = aMomentBefore(new Date());
         }
 
+        System.out.println("Lab Results Get Results: Setting discontinuation date to: " + orderDiscontinuationDate);
+
         if (od != null && od.isActive()) {
-            if ((StringUtils.isNotBlank(specimenStatus) && specimenStatus.equals("Rejected")) || StringUtils.isNotBlank(rejectedReason) || (StringUtils.isNotBlank(result) && result.equals("Collect New Sample"))) {
+            if ((StringUtils.isNotBlank(specimenStatus) && specimenStatus.equals("Rejected")) || (StringUtils.isNotBlank(result) && result.equals("Collect New Sample"))) {
                 // Get all active VL orders and discontinue them
                 Map<String, Order> ordersToProcess = getOrdersToProcess(od, vlTestConceptQuantitative);
                 Order o1 = ordersToProcess.get("orderToRetain");
                 Order o2 = ordersToProcess.get("orderToVoid");
                 String discontinuationReason = "";
-                if (StringUtils.isNotBlank(rejectedReason)){
-                    discontinuationReason = rejectedReason;
-                } else if (result.equals("Collect New Sample")) {
+                if (result.equalsIgnoreCase("Collect New Sample")) {
                     discontinuationReason = "Collect New Sample";
                 } else {
                     discontinuationReason = "Rejected specimen";
@@ -598,6 +608,7 @@ public class LabOrderDataExchange {
                 try {
                     // discontinue one order, and void the other.
                     // Discontinuing both orders result in one of them remaining active
+                    System.out.println("Lab Results Get Results: Start order discontinue");
                     orderService.discontinueOrder(o1, discontinuationReason, orderDiscontinuationDate, o1.getOrderer(),
                             o1.getEncounter());
                     orderService.voidOrder(o2, discontinuationReason);
@@ -622,7 +633,9 @@ public class LabOrderDataExchange {
                 String aboveMillionResult = "> 10,000,000 cp/ml";
                 Obs o = new Obs();
 
-                if (result.equals(lDLResult)) {
+                conceptToRetain = vlTestConceptQualitative;
+                //conceptToRetain = vlTestConceptQuantitative;
+                if (result.equalsIgnoreCase(lDLResult)) {
                     conceptToRetain = vlTestConceptQualitative;
                     o.setValueCoded(LDLConcept);
                 } else if (result.equalsIgnoreCase(aboveMillionResult)) {
@@ -630,7 +643,9 @@ public class LabOrderDataExchange {
                     o.setValueNumeric(new Double(10000001));
                 } else {
                     conceptToRetain = vlTestConceptQuantitative;
-                    o.setValueNumeric(Double.valueOf(result));
+                    //o.setValueNumeric(Double.valueOf(result));
+                    //o.setValueCoded(conceptToRetain);
+                    o.setValueNumeric(new Double(1));
                 }
 
                 // In order to record results both qualitative (LDL) and quantitative,
@@ -661,6 +676,7 @@ public class LabOrderDataExchange {
                     try {
 
                         encounterService.saveEncounter(enc);
+                        System.out.println("Lab Results Get Results: Start order discontinue");
                         orderService.discontinueOrder(orderToRetain, "Results received", orderDiscontinuationDate, orderToRetain.getOrderer(),
                                 orderToRetain.getEncounter());
                         orderService.voidOrder(orderToVoid, "Duplicate VL order");
@@ -690,6 +706,7 @@ public class LabOrderDataExchange {
                     try {
 
                         encounterService.saveEncounter(enc);
+                        System.out.println("Lab Results Get Results: Start order discontinue");
                         orderService.discontinueOrder(orderToRetain, "Results received", orderDiscontinuationDate, orderToRetain.getOrderer(),
                                 orderToRetain.getEncounter());
                         // this is really a hack to ensure that order date_stopped is filled, otherwise the order will remain active
@@ -736,7 +753,7 @@ public class LabOrderDataExchange {
                         try {
 
                             encounterService.saveEncounter(enc);
-                            encounterService.saveEncounter(enc);
+                            System.out.println("Lab Results Get Results: Start order discontinue");
                             orderService.discontinueOrder(savedOrder, "Results received", orderDiscontinuationDate, savedOrder.getOrderer(),
                                     savedOrder.getEncounter());
                             // this is really a hack to ensure that order date_stopped is filled, otherwise the order will remain active
